# polygons-cutter

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  manage.py  pyproject.toml  pytest.ini  uwsgi.ini
cutter/: apps.py  models.py  schemas.py  serializers.py  urls.py  views.py
cutter/tests/: test_views.py
polygons/: asgi.py  settings.py  urls.py  views.py  wsgi.py
tests/: data.py  utils.py
